--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -37,7 +37,7 @@
                     </div>
                     <div class="hidden space-x-12 md:flex">
                         <a href="/" class="text-white hover:text-yellow-400 transition">Inicio</a>
-                        <a href="/catalogoCursos" class="text-white hover:text-yellow-400 transition">Catálogo de Cursos</a>
+                        <a href="/catalogoCursos" class="text-white hover:text-yellow-400 transition">Catálogo</a>
                         <a href="/Productos" class="text-white hover:text-yellow-400 transition">Catálogo de Productos</a>
                         <a href="/Servicios" class="text-white hover:text-yellow-400 transition">Servicios</a>
                         <a href="/promociones" class="text-white hover:text-yellow-400 transition">Promociones</a>
