Cambios texto pagina Inicio

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -6,7 +6,7 @@
   <div class="container mx-auto p-6">
     <div class="flex flex-col md:flex-row justify-around items-center text-center md:text-left">
       <div class="mb-4 md:mb-0">
-        <h5 class="text-xl font-bold">LA CASA INFORMÁTICA</h5>
+        <h5 class="text-xl font-bold">URBAN THREADS</h5>
         <p>Domina la Tecnología de Forma Práctica y Actualizada</p>
       </div>
       <div class="mb-4 md:mb-0">
