--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -17,7 +17,7 @@
                         URBAN THREADS
                     </h1>
                     <p class="text-center text-lg md:text-2xl text-white leading-snug md:text-left mt-4 md:mt-0">
-                        Domina la Tecnología de <br class="hidden md:block"> Forma Práctica y Actualizada
+                        Donde cada detalle <br class="hidden md:block"> Eleva tu estilo
                     </p>
                 </div>
                 <div class="flex justify-center w-full md:w-1/2">
