quitar imagen pag. inicio

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -29,6 +29,7 @@
               <!--<br class="hidden md:block" />-->
             </p>
           </div>
+          <!--
           <div class="flex justify-center w-full md:w-1/2">
             <img
               src="/img/imagenpro.svg"
@@ -37,7 +38,7 @@
               width="800"
               height="800"
             />
-          </div>
+          </div>-->
         </div>
       </section>
     </div>
