realizar renovacion de bots, pag inicio, pag bot

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -226,6 +226,7 @@
       agent-id="19859be0-7ab6-414a-baf4-055672da6f7a"
       language-code="es"
     ></df-messenger>
+    <!--FIN BOT TIENDA-->
   </body>
   <%- include('partials/footer') %>
 </html>
