prueba cambio color navbar

--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/@heroicons/react@1.0.6/outline/heroicons.js"></script>
     <style>
         .navbar {
-            background-color: #374369;
+            background-color: #131313; /*Fondo navbar*/
         }
         header {
             text-align: center;
