--- a/src/views/Servicios.ejs
+++ b/src/views/Servicios.ejs
@@ -6,7 +6,7 @@
     <title><%= title %></title>
     <style>
         body {
-            background-color: #A3D5E5; /* Color celeste */
+            background-color: #3d3d3d; /* Color celeste */
             color: white; /* Color de texto blanco por defecto */
             margin: 0; /* Eliminar márgenes por defecto del body */
             font-family: Arial, sans-serif; /* Fuente por defecto */
