--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -36,14 +36,14 @@
 
 <style>
   footer {
-    background-color: #1e3a8a; /* Color de fondo del footer */
+    background-color: #111111; /* Color de fondo del footer */
     color: white; /* Color del texto */
     padding: 20px; /* Espaciado interno */
     text-align: center; /* Alineación del texto */
   }
 
   footer a {
-    color: #61dafb; /* Color de los enlaces */
+    color: #009dc9; /* Color de los enlaces */
     text-decoration: none; /* Sin subrayado */
     font-size: 24px; /* Tamaño del ícono */
   }
