nuevo cambio class div body

--- a/src/views/bot.ejs
+++ b/src/views/bot.ejs
@@ -7,7 +7,7 @@
 
     <style>
       body {
-        background-color: #a3d5e5; /* Color celeste */
+        background-color: #353535; /* Color celeste */
         color: white; /* Color de texto blanco por defecto */
         margin: 0; /* Eliminar márgenes por defecto del body */
       }
@@ -61,7 +61,7 @@
         src="https://console.dialogflow.com/api-client/demo/embedded/19859be0-7ab6-414a-baf4-055672da6f7a"
       >
       </iframe>
-      
+
     </main>
     <br /><br />
 
