--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,7 +10,7 @@
   <body>
     <%- include('partials/navigation') %>
 
-    <div class="bg-gradient-to-r from-blue-800 via-blue-400 to-white">
+    <div class="bg-gradient-to-r from-black-800 via-blue-400 to-white">
       <section id="hero" class="hero-section">
         <div
           class="container flex flex-col-reverse items-center px-6 mx-auto md:flex-row space-y-5 md:space-y-0"
