probando otro div con background de img

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,6 +11,9 @@
     <%- include('partials/navigation') %>
     <!--<div class="bg-gradient-to-r from-blue-800 via-blue-400 to-white">-->
     <div class="bg-gradient-to-r from-black to-black">
+      <div class="bg-cover bg-center" style="background-image: url('src/public/img/fon-urban.jpg');">
+        <!-- Tu contenido aquí -->
+      </div>
       <section id="hero" class="hero-section">
         <div
           class="container flex flex-col-reverse items-center px-6 mx-auto md:flex-row space-y-5 md:space-y-0"
