--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,8 +11,11 @@
     <%- include('partials/navigation') %>
     <!--<div class="bg-gradient-to-r from-blue-800 via-blue-400 to-white">-->
     <div class="bg-gradient-to-r from-black to-black">
-      <div class="bg-cover bg-center" style="background-image: url('src/public/img/fon-urban.jpg');">
-        <!-- Tu contenido aquí -->
+      <div class="bg-cover bg-center" style="background-image: url('fon-urban.jpg');">
+        <img
+              src="/img/fon-urban.jpg"
+              class="object-contain w-4/5 md:w-3/4 lg:w-full h-auto"
+            />
       </div>
       <section id="hero" class="hero-section">
         <div
