--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,12 +11,13 @@
     <%- include('partials/navigation') %>
     <!--<div class="bg-gradient-to-r from-blue-800 via-blue-400 to-white">-->
     <div class="bg-gradient-to-r from-black to-black">
+      <!--
       <div class="bg-cover bg-center" style="background-image: url('fon-urban.jpg');">
         <img
               src="/img/fon-urban.jpg"
               class="object-contain w-4/5 md:w-3/4 lg:w-full h-auto"
             />
-      </div>
+      </div>-->
       <section id="hero" class="hero-section">
         <div
           class="container flex flex-col-reverse items-center px-6 mx-auto md:flex-row space-y-5 md:space-y-0"
@@ -34,6 +35,10 @@
               la diferencia.
               <!--<br class="hidden md:block" />-->
             </p>
+            <img
+              src="/img/fon-urban.jpg"
+              class="object-contain w-4/5 md:w-3/4 lg:w-full h-auto"
+            />
           </div>
           <!--
           <div class="flex justify-center w-full md:w-1/2">
