--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,6 +8,15 @@
     <!-- Link to external CSS -->
   </head>
   <body>
+     <!-- header -->
+     <header id="home" class="header">
+      <div class="overlay text-white text-center">
+          <h1 class="display-2 font-weight-bold my-3">URBAN THREADS</h1>
+          <h2 class="display-4 mb-5">Donde cada detalle resalta tu estilo y marca la diferencia</h2>
+          <a class="btn btn-lg btn-primary" href="#gallary">Ve nuestro catálogo</a>
+      </div>
+  </header>
+  
     <%- include('partials/navigation') %>
     <!--<div class="bg-gradient-to-r from-blue-800 via-blue-400 to-white">-->
     <div class="bg-gradient-to-r from-black to-black">
@@ -23,6 +32,7 @@
           class="container flex flex-col-reverse items-center px-6 mx-auto md:flex-row space-y-5 md:space-y-0"
         >
           <div class="flex flex-col mb-16 md:w-1/2">
+            <img src="">
             <h1
               class="text-white text-4xl md:text-6xl font-bold text-center md:text-left leading-tight"
             >
