--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -15,6 +15,14 @@ header {
     top: 0;
     z-index: 1000;
 }
+.header {
+    height: 100vh;
+    max-height: 900px;
+    background: url(../imgs/fon-urban.jpg) no-repeat center center fixed;
+    background-size: cover;
+    min-height: 750px;
+}
+
 main {
     margin-top: 4em;
     max-width: 1200px;
