--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,15 +8,19 @@
     <!-- Link to external CSS -->
   </head>
   <body>
-     <!-- header -->
-     <header id="home">
+
+    <!-- header casa info -->
+    <header id="home" class="header">
       <div class="overlay text-white text-center">
-        <img src="/img/fon-urban.jpg" class="=header">
-          <h1 class="display-2 font-weight-bold my-3">URBAN THREADS</h1>
-          <h2 class="display-4 mb-5">Donde cada detalle resalta tu estilo y marca la diferencia</h2>
-          <a class="btn btn-lg btn-primary" href="#gallary">Ve nuestro catálogo</a>
+        <h1 class="display-2 font-weight-bold my-3">URBAN THREADS</h1>
+        <h2 class="display-4 mb-5">
+          Donde cada detalle resalta tu estilo y marca la diferencia
+        </h2>
+        <a class="btn btn-lg btn-primary" href="#gallary"
+          >Ve nuestro catálogo</a
+        >
       </div>
-  </header>
+    </header>
 
     <%- include('partials/navigation') %>
     <!--<div class="bg-gradient-to-r from-blue-800 via-blue-400 to-white">-->
@@ -33,7 +37,7 @@
           class="container flex flex-col-reverse items-center px-6 mx-auto md:flex-row space-y-5 md:space-y-0"
         >
           <div class="flex flex-col mb-16 md:w-1/2">
-            <img src="">
+            <img src="" />
             <h1
               class="text-white text-4xl md:text-6xl font-bold text-center md:text-left leading-tight"
             >
