--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -32,7 +32,7 @@
                 <div class="flex items-center">
                     <div class="mr-10">
                         <a href="/">
-                            <img src="img/logoCasa.png" alt="Logo" width="80" height="80" class="h-20 w-20">
+                            <img src="/src/public/img/Urbanthreadslog.png" alt="Logo" width="80" height="80" class="h-20 w-20">
                         </a>
                     </div>
                     <div class="hidden space-x-12 md:flex">
