--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,136 +1,165 @@
 body {
-    font-family: 'Helvetica Neue', Arial, sans-serif;
-    background-color: #f7f7f7;
-    color: #252525;
-    margin: 0;
-    padding: 0;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+  background-color: #f7f7f7;
+  color: #252525;
+  margin: 0;
+  padding: 0;
 }
 
 .header {
-    height: 100vh;
-    max-height: 900px;
-    background: url(../imgs/fon-urban.jpg) no-repeat center center fixed;
-    background-size: cover;
-    min-height: 750px;
-  }
+  height: 100vh;
+  max-height: 900px;
+  background: url(../img/fon-urban.jpg) no-repeat center center fixed;
+  background-size: cover;
+  min-height: 750px;
+}
 
-  
 .header .overlay {
-    height: 100%;
-    background: rgba(9, 9, 9, 0.75);
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
+  height: 100%;
+  background: rgba(9, 9, 9, 0.75);
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.header-title {
+  font-size: 2.4rem;
+  font-weight: bold;
+  opacity: 0.8;
+  color: #343a40;
+}
+
+.header-mini {
+  min-height: 24rem;
+  height: 24rem;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-align: center;
+  padding: 1rem;
+  background: #ffa1b4 !important;
+}
+
+.display-1 {
+  font-size: 6rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
+.display-2 {
+  font-size: 5rem;
+  line-height: 1.5;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.display-3 {
+  font-size: 4.5rem;
+  font-weight: 300;
+  line-height: 1.5;
+}
+.ti-home:before {
+	content: "\e69b";
+}
+article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+    display: block;
   }
   
-  .header-title {
-    font-size: 2.4rem;
-    font-weight: bold;
-    opacity: .8;
-    color: #343a40;
-  }
-  
-  .header-mini {
-    min-height: 24rem;
-    height: 24rem;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-    padding: 1rem;
-    background: #ffa1b4 !important;
-  }
-  
+.display-4 {
+  font-size: 1.2rem;
+  font-weight: 70;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
 
 main {
-    margin-top: 4em;
-    max-width: 1200px;
-    margin: 4em auto 2em auto;
-    padding: 2em;
-    background: white;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  margin-top: 4em;
+  max-width: 1200px;
+  margin: 4em auto 2em auto;
+  padding: 2em;
+  background: white;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 .hero {
-    background-image: url('images/cinema-hero.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 400px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(0, 0, 0);
-    text-align: center;
+  background-image: url("images/cinema-hero.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 400px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(0, 0, 0);
+  text-align: center;
 }
 .hero h2 {
-    font-size: 3em;
-    margin: 0;
+  font-size: 3em;
+  margin: 0;
 }
 .content {
-    padding: 2em 0;
+  padding: 2em 0;
 }
 .content h2 {
-    font-size: 2.5em;
-    margin-bottom: 0.5em;
-    text-align: center;
+  font-size: 2.5em;
+  margin-bottom: 0.5em;
+  text-align: center;
 }
 .content p {
-    line-height: 1.6;
-    text-align: center;
+  line-height: 1.6;
+  text-align: center;
 }
 .movies {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 .movie {
-    max-width: 300px;
-    margin: 1em;
-    text-align: center;
+  max-width: 300px;
+  margin: 1em;
+  text-align: center;
 }
 .movie img {
-    width: 100%;
-    height: auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .movie h3 {
-    margin: 0.5em 0;
+  margin: 0.5em 0;
 }
 footer {
-    background-color: #000;
-    color: white;
-    text-align: center;
-    padding: 1em 0;
+  background-color: #000;
+  color: white;
+  text-align: center;
+  padding: 1em 0;
 }
 footer p {
-    margin: 0;
+  margin: 0;
 }
