--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,20 +8,6 @@
     <!-- Link to external CSS -->
   </head>
   <body>
-
-    <!-- header casa info -->
-    <header id="home" class="header">
-      <div class="overlay text-white text-center">
-        <h1 class="display-2 font-weight-bold my-3">URBAN THREADS</h1>
-        <h2 class="display-4 mb-5">
-          Donde cada detalle resalta tu estilo y marca la diferencia
-        </h2>
-        <a class="btn btn-lg btn-primary" href="#gallary"
-          >Ve nuestro catálogo</a
-        >
-      </div>
-    </header>
-
     <%- include('partials/navigation') %>
     <!--<div class="bg-gradient-to-r from-blue-800 via-blue-400 to-white">-->
     <div class="bg-gradient-to-r from-black to-black">
@@ -66,6 +52,20 @@
             />
           </div>-->
         </div>
+      </section>
+      <section>
+        <!-- header casa info -->
+        <header id="home" class="header">
+          <div class="overlay text-white text-center">
+            <h1 class="display-2 font-weight-bold my-3">URBAN THREADS</h1>
+            <h2 class="display-4 mb-5">
+              Donde cada detalle resalta tu estilo y marca la diferencia
+            </h2>
+            <a class="btn btn-lg btn-primary" href="#gallary"
+              >Ve nuestro catálogo</a
+            >
+          </div>
+        </header>
       </section>
     </div>
 
