--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -31,8 +31,8 @@
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
                     <div class="mr-10">
-                        <a href="/">
-                            <img src="/src/public/img/Urbanthreadslog.png" alt="Logo" width="80" height="80" class="h-20 w-20">
+                        <a href="#">
+                            <img src="/src/public/img/Urbanthreadslog.png" alt="Logo" width="80" height="80">
                         </a>
                     </div>
                     <div class="hidden space-x-12 md:flex">
