--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -6,7 +6,7 @@ body {
   padding: 0;
 }
 .header-bg {
-  background-image: url("ruta-de-tu-imagen.jpg"); /* Reemplaza con la ruta de tu imagen */
+  background-image: url("/src/public/img/fon-urban.jpg"); /* Reemplaza con la ruta de tu imagen */
   background-size: cover; /* Asegura que la imagen cubra todo el header */
   background-position: center; /* Centra la imagen */
   background-repeat: no-repeat; /* Evita que la imagen se repita */
