--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -20,18 +20,30 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(
-    0,
-    0,
-    0,
-    0.5
-  ); /* Agrega una capa oscura para mejorar la visibilidad del texto */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   padding: 20px;
+}
+.display-2 {
+  font-size: 5rem;
+  line-height: 1.5;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.display-3 {
+  font-size: 4.5rem;
+  font-weight: 300;
+  line-height: 1.5;
+}
+
+.display-4 {
+  font-size: 1.2rem;
+  font-weight: 70;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 main {
