--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -53,19 +53,19 @@
           </div>-->
         </div>
       </section>
-      <section>
-        <!-- header casa info -->
-        <header id="home" class="header header-bg">
-          <div class="overlay text-white text-center">
-            <h1 class="display-2 font-weight-bold my-3">URBAN THREADS</h1>
-            <h2 class="display-4 mb-5">
-              Donde cada detalle resalta tu estilo y marca la diferencia
-            </h2>
-            <a class="btn btn-lg btn-primary" href="#gallary">Ve nuestro catálogo</a>
-          </div>
-        </header>
-      </section>      
     </div>
+    <!-- header casa info -->
+    <header id="home" class="header header-bg">
+      <div class="overlay text-white text-center">
+        <h1 class="display-2 font-weight-bold my-3">URBAN THREADS</h1>
+        <h2 class="display-4 mb-5">
+          Donde cada detalle resalta tu estilo y marca la diferencia
+        </h2>
+        <a class="btn btn-lg btn-primary" href="#gallary"
+          >Ve nuestro catálogo</a
+        >
+      </div>
+    </header>
 
     <main class="flex flex-col items-center min-h-screen text-black">
       <div
